# HistorischeTabellenSemanticExtraction

./: .flake8  README.md  README.rst  noxfile.py  requirements.txt  setup.cfg
scripts/: tensorboard2tikz.py
src/: copy_tables.py  customdataset.py  dataset.py  download.py  evaluation.py  preprocess.py  show_annotations.py  split.py  trainer.py
src/TableExtraction/: __init__.py  customdataset.py  dataset_baseline.py  dataset_newspaper.py  download.py  evaluation.py  postprocessing.py  predict.py  predict_textline.py  preprocess.py  preprocess_newspaper.py  split.py  trainer.py  trainer_baseline.py
src/TableExtraction/utils/: __init__.py  metrics.py  utils.py
src/utils/: cell_connection.py  metrics.py  utils.py
tests/: __init__.py  example_test.py
tests/TestData/I_HA_Rep_89_Nr_16160_0089/: I_HA_Rep_89_Nr_16160_0089_cell_0.pt  I_HA_Rep_89_Nr_16160_0089_col_0.pt  I_HA_Rep_89_Nr_16160_0089_row_0.pt  I_HA_Rep_89_Nr_16160_0089_table_0.pt  I_HA_Rep_89_Nr_16160_0089_tables.pt  I_HA_Rep_89_Nr_16160_0089_textregions.pt
