##########################
# Setup.py Configuration #
##########################
[metadata]
name = tabseg
version = 0.0.1-dev
description = TODO, what does your package do?
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/NewspaperSegmentation/HistorischeTabellenSemanticExtraction
download_url = https://github.com/NewspaperSegmentation/HistorischeTabellenSemanticExtraction/releases
project_urls =
    Bug Tracker = https://github.com/NewspaperSegmentation/HistorischeTabellenSemanticExtraction/issues
    Source Code = https://github.com/NewspaperSegmentation/HistorischeTabellenSemanticExtraction


keywords =
    Historic Tables
    PyTorch

# Author information
author = TODO
author_email = TODO
maintainer = TODO
maintainer_email = TODO


classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    torch
    matplotlib
    numpy
    pytest
    nox

python_requires = >=3.9

packages = find:
package_dir =
    = src

[options.packages.find]
where = src


##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short